--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,3 @@
 <html><img src= 'http://bit.ly/1eze8aE' style='border:dashed red;'></html>
 
-<% @name='Hemesh'%>
-<h1>Hello, <%= @name %>.</h1>
-Today is <%= Time.now.strftime('%A') %>.
+<h1>My name is <%= @name %></h1>
