--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,10 @@
 <html><img src= 'http://bit.ly/1eze8aE' style='border:dashed red;'></html>
 
 <h1>My name is <%= @name %></h1>
+
+<% if @name == nil %>
+  <form action="/named-cat">
+   <input id="POST-name" type="text" name="name">
+   <input type="submit" value="Submit">
+  </form>
+<% end %>
