changing get to post

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 <h1>My name is <%= @name %></h1>
 
 <% if @name == nil %>
-  <form action="/named-cat">
+  <form method="post" action="/named-cat">
    <input id="POST-name" type="text" name="name">
    <input type="submit" value="Submit">
   </form>
